--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ theme: jekyll-theme-cayman
 title: ngDAO
 description: DAO de apoyo a otras DAOs sin ánimo de lucro
 collections:
-  - ngdaos
+  ngdaos:
+    output: true
